Bug 492017 - Snap apps are showing up in "system software" instead of "applications" in the updates section
Summary: Snap apps are showing up in "system software" instead of "applications" in th...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 6.1.3
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-22 03:05 UTC by yamiyukisenpai
Modified: 2024-08-23 11:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Example (64.25 KB, image/png)
2024-08-22 03:05 UTC, yamiyukisenpai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description yamiyukisenpai 2024-08-22 03:05:53 UTC
Created attachment 172837 [details]
Example

SUMMARY
Snap application updates are showing up under "system software" instead  of "applications"

OBSERVED RESULT
When checking for updates, a Snap would show up in the "system applications"

EXPECTED RESULT
Should be in "applications", except for content snaps or core snaps

SOFTWARE/OS VERSIONS
Operating System: TUXEDO OS 3
KDE Plasma Version: 6.1.3
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.0
Kernel Version: 6.8.0-100039-tuxedo (64-bit)
Graphics Platform: Wayland
Processors: 24 × AMD Ryzen 9 5900X 12-Core Processor
Memory: 62.7 GiB of RAM
Graphics Processor: AMD Radeon RX 6900 XT
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: X570S AORUS MASTER
System Version: -CF

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-08-22 13:10:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/907
Comment 2 Harald Sitter 2024-08-23 11:11:41 UTC
Git commit b438721a0955c294bce9597895225e3187606334 by Harald Sitter.
Committed on 23/08/2024 at 11:07.
Pushed by sitter into branch 'master'.

snap: fix snapType mapping

condition was the wrong way around

M  +1    -1    libdiscover/backends/SnapBackend/SnapResource.cpp

https://invent.kde.org/plasma/discover/-/commit/b438721a0955c294bce9597895225e3187606334
Comment 3 Harald Sitter 2024-08-23 11:18:36 UTC
Git commit 3f203b31762008587e108fd12c5a8fb0f58a6809 by Harald Sitter.
Committed on 23/08/2024 at 11:14.
Pushed by sitter into branch 'Plasma/6.1'.

snap: fix snapType mapping

condition was the wrong way around
(cherry picked from commit b438721a0955c294bce9597895225e3187606334)

M  +1    -1    libdiscover/backends/SnapBackend/SnapResource.cpp

https://invent.kde.org/plasma/discover/-/commit/3f203b31762008587e108fd12c5a8fb0f58a6809