snap: fix snapType mapping

condition was the wrong way around

BUG: 492017
(cherry picked from commit b438721a0955c294bce9597895225e3187606334)